--- a/config.json.sample
+++ b/config.json.sample
@@ -17,6 +17,7 @@
             "disablebuymacd" : 0,
             "disablebuyobv" : 1,
             "disablebuyelderray" : 0,
+            "disablebuyasm" : 0,
             "disablefailsafefibonaccilow" : 1,
             "disableprofitbankreversal" : 0,
             "disabletracker" : 1,
@@ -45,6 +46,7 @@
             "disablebuymacd" : 0,
             "disablebuyobv" : 1,
             "disablebuyelderray" : 0,
+            "disablebuyasm" : 0,
             "disablefailsafefibonaccilow" : 1,
             "disableprofitbankreversal" : 0,
             "disabletracker" : 1,
